# shizuku-editor

./: .gitignore  CHANGELOG.md  LICENSE  README.ja.md  README.md  biome.json  index.html  lint-staged.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260128_init.sql  20260319_drop_sync_tombstones.sql
src-tauri/src/: error.rs  lib.rs  main.rs  menu.rs
src-tauri/src/commands/: app_state.rs  backup.rs  export.rs  font.rs  knowledge.rs  knowledge_type.rs  menu.rs  mod.rs  outline.rs  scene_image.rs  scene_knowledge.rs  scene_version.rs  search.rs  settings.rs  work.rs
src-tauri/src/db/: mod.rs  sample_works.rs  sample_works_en.rs  seed.rs
src-tauri/src/models/: app_state.rs  backup.rs  chapter.rs  export.rs  knowledge.rs  knowledge_type.rs  mod.rs  outline.rs  scene.rs  scene_image.rs  scene_version.rs  search.rs  settings.rs  work.rs
src-tauri/src/repositories/: chapter.rs  knowledge.rs  knowledge_type.rs  mod.rs  outline.rs  scene.rs  scene_image.rs  scene_knowledge.rs  scene_version.rs  work.rs
src-tauri/src/services/: app_state.rs  backup.rs  chapter.rs  font.rs  knowledge.rs  knowledge_type.rs  mod.rs  outline.rs  scene.rs  scene_image.rs  scene_knowledge.rs  scene_version.rs  search.rs  settings.rs  work.rs
src-tauri/tests/: chapter_tests.rs  export_tests.rs  knowledge_tests.rs  outline_tests.rs  scene_tests.rs  scene_version_tests.rs  search_tests.rs  work_tests.rs
(+423 files in other folders)
