[package]
name = "shizuku-editor"
version = "1.0.0"
description = "A desktop writing application for writers"
authors = ["riki-nishida"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shizuku_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tokio = { version = "1", features = ["macros", "process", "io-util"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tauri-plugin-dialog = "2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rusqlite = "0.32"
uuid = { version = "1", features = ["v4"] }
docx-rs = "0.4"
printpdf = "0.9"
epub-builder = "0.8"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-decorum = "1"
open = "5"
font-kit = "0.14"

[features]
devtools = ["tauri/devtools"]
test-utils = []

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

